additional fix on mobile viewport, adjusting the height of .calculator

--- a/style.css
+++ b/style.css
@@ -94,6 +94,21 @@ input::placeholder {
     }
     .calculator {
         max-width: 80%;
+        height: 80%;
+        padding: 1.5em;
+    }
+
+    input {
+        margin-bottom: 0.2em;
+    }
+
+    button {
+        padding: .4em 0;
+    }
+
+    .foot {
+        margin-top: 1em;
+        font-size: .7rem;
     }
 }
 
@@ -103,13 +118,22 @@ input::placeholder {
     }
     .calculator {
         max-width: 90%;
+        height: 80%;
+        padding: 1.5em;
     }
 
     button {
         font-size: 1rem;
+        padding: .4em 0;
     }
 
     input {
         font-size: 1.5rem;
+        margin-bottom: 0.2em;
+    }
+
+    .foot {
+        margin-top: 1em;
+        font-size: .7rem;
     }
 }
